hphp/test/zend/bad/zend/errmsg_043.php
<?php

foreach (array(1,2,3) as $k=>&$v) {
}

echo "Done\n";
?>